--- a/app/src/main/res/menu/menu_edit_note.xml
+++ b/app/src/main/res/menu/menu_edit_note.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/deleteMenu"
-        android:icon="@drawable/delete"
+        android:icon="@drawable/bin"
         android:title=""
         app:showAsAction="always"/>
 </menu>
